--- a/docs/package.json
+++ b/docs/package.json
@@ -11,7 +11,8 @@
         "start": "gatsby develop",
         "build": "gatsby build",
         "serve": "gatsby serve",
-        "clean": "gatsby clean"
+        "clean": "gatsby clean",
+        "deploy": "gatsby build --prefix-paths && gh-pages -d public"
     },
     "dependencies": {
         "bootstrap": "^4.6.0",
@@ -20,5 +21,8 @@
         "react-bootstrap": "^1.4.3",
         "react-dom": "^16.13.1",
         "styled-components": "^5.2.1"
+    },
+    "devDependencies": {
+        "gh-pages": "^3.1.0"
     }
 }
