--- a/docs/package.json
+++ b/docs/package.json
@@ -15,8 +15,18 @@
         "deploy": "gatsby build --prefix-paths && gh-pages -d public"
     },
     "dependencies": {
+        "@types/styled-components": "^5.1.7",
+        "babel-plugin-styled-components": "^1.12.0",
         "bootstrap": "^4.6.0",
         "gatsby": "^2.32.3",
+        "gatsby-plugin-sharp": "^3.0.0",
+        "gatsby-plugin-styled-components": "^4.0.0",
+        "gatsby-remark-copy-linked-files": "^3.0.0",
+        "gatsby-remark-images": "^4.0.0",
+        "gatsby-source-filesystem": "^3.0.0",
+        "gatsby-transformer-remark": "^3.0.0",
+        "jquery": "^3.6.0",
+        "popper.js": "^1.16.1",
         "react": "^16.13.1",
         "react-bootstrap": "^1.4.3",
         "react-dom": "^16.13.1",
