- update README - debug gatsby pathPrefix bug

--- a/docs/package.json
+++ b/docs/package.json
@@ -9,8 +9,8 @@
     "scripts": {
         "develop": "gatsby develop",
         "start": "gatsby develop",
-        "build": "gatsby build",
-        "serve": "gatsby serve",
+        "build": "gatsby build --prefix-paths",
+        "serve": "gatsby serve --prefix-paths",
         "clean": "gatsby clean",
         "deploy": "gatsby build --prefix-paths && gh-pages -d public"
     },
