--- a/docs/package.json
+++ b/docs/package.json
@@ -21,6 +21,7 @@
         "gatsby": "^2.32.3",
         "gatsby-plugin-sharp": "^3.0.0",
         "gatsby-plugin-styled-components": "^4.0.0",
+        "gatsby-remark-autolink-headers": "^3.2.0",
         "gatsby-remark-copy-linked-files": "^3.0.0",
         "gatsby-remark-images": "^4.0.0",
         "gatsby-source-filesystem": "^3.0.0",
