--- a/docs/package.json
+++ b/docs/package.json
@@ -8,17 +8,18 @@
     ],
     "scripts": {
         "develop": "gatsby develop",
-        "start": "npm run develop",
-        "build": "gatsby build --prefix-paths",
+        "start": "gatsby clean && npm run develop",
+        "build": "gatsby clean && gatsby build --prefix-paths",
         "serve": "gatsby serve --prefix-paths",
         "clean": "gatsby clean",
-        "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+        "deploy": "gatsby clean && gatsby build --prefix-paths && gh-pages -d public"
     },
     "dependencies": {
         "@types/styled-components": "^5.1.7",
         "babel-plugin-styled-components": "^1.12.0",
         "bootstrap": "^4.6.0",
         "gatsby": "^2.32.3",
+        "gatsby-plugin-google-gtag": "^3.14.0",
         "gatsby-plugin-sharp": "^3.0.0",
         "gatsby-plugin-styled-components": "^4.0.0",
         "gatsby-remark-autolink-headers": "^3.2.0",
