--- a/docs/package.json
+++ b/docs/package.json
@@ -20,6 +20,8 @@
         "bootstrap": "^4.6.0",
         "gatsby": "^2.32.3",
         "gatsby-plugin-google-gtag": "^3.14.0",
+        "gatsby-plugin-react-helmet": "^5.0.0",
+        "gatsby-plugin-react-i18next": "^1.1.1",
         "gatsby-plugin-sharp": "^3.0.0",
         "gatsby-plugin-styled-components": "^4.0.0",
         "gatsby-remark-autolink-headers": "^3.2.0",
@@ -27,11 +29,14 @@
         "gatsby-remark-images": "^4.0.0",
         "gatsby-source-filesystem": "^3.0.0",
         "gatsby-transformer-remark": "^3.0.0",
+        "i18next": "^21.3.2",
         "jquery": "^3.6.0",
         "popper.js": "^1.16.1",
         "react": "^16.13.1",
         "react-bootstrap": "^1.4.3",
         "react-dom": "^16.13.1",
+        "react-helmet": "^6.1.0",
+        "react-i18next": "^11.12.0",
         "styled-components": "^5.2.1"
     },
     "devDependencies": {
