--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
         "deploy": "gatsby clean && gatsby build --prefix-paths && gh-pages -d public"
     },
     "dependencies": {
-        "@types/styled-components": "^5.1.7",
         "babel-plugin-styled-components": "^1.12.0",
-        "bootstrap": "^4.6.0",
+        "bootstrap": "5.1",
         "gatsby": "^2.32.3",
         "gatsby-plugin-google-gtag": "^3.14.0",
         "gatsby-plugin-react-helmet": "^5.0.0",
@@ -33,13 +32,14 @@
         "jquery": "^3.6.0",
         "popper.js": "^1.16.1",
         "react": "^16.13.1",
-        "react-bootstrap": "^1.4.3",
+        "react-bootstrap": "^2.0.0",
         "react-dom": "^16.13.1",
         "react-helmet": "^6.1.0",
         "react-i18next": "^11.12.0",
         "styled-components": "^5.2.1"
     },
     "devDependencies": {
+        "@types/styled-components": "^5.1.15",
         "gh-pages": "^3.1.0"
     }
 }
